Subida 27/02/2024